// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders with heading and a button 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-gap: 0.75rem;
  grid-template-columns: minmax(auto, 100%) repeat(1, auto);
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(1.5rem * 0.5);
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  width: auto;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-2 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-2 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-2 i:first-child {
  margin-left: -1.25rem;
}

.emotion-2 i:last-child {
  margin-right: -1.25rem;
}

.emotion-2:enabled:active {
  background-color: #061813;
}

.emotion-2:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-2:enabled:hover {
  background-color: #2f413c;
}

.emotion-2::-moz-focus-inner {
  border: 0;
}

.emotion-2:focus {
  border: 1px solid transparent;
}

.emotion-2:focus:hover {
  border: 1px solid transparent;
}

.emotion-2 i {
  color: inherit;
}

.emotion-3 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: inherit;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

<header
  className="emotion-0"
  display="grid"
>
  <h1
    className="emotion-1"
    color="text.dark"
    fontSize="size7"
    fontWeight="bold"
  >
    My Heading
  </h1>
  <button
    className="button--primary emotion-2"
    disabled={false}
    fontWeight="medium"
    size="large"
  >
    <div
      className="emotion-3"
      display="inline-grid"
    >
      <p
        className="emotion-4"
        color="inherit"
        fontSize="inherit"
      >
        Primary
      </p>
    </div>
  </button>
</header>
`;

exports[`<Header /> renders with heading and no buttons 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-gap: 0.75rem;
  grid-template-columns: minmax(auto, 100%);
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(1.5rem * 0.5);
}

<header
  className="emotion-0"
  display="grid"
>
  <h1
    className="emotion-1"
    color="text.dark"
    fontSize="size7"
    fontWeight="bold"
  >
    My Heading
  </h1>
</header>
`;

exports[`<Header /> renders with heaeding and multiple buttons 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  grid-gap: 0.75rem;
  grid-template-columns: minmax(auto, 100%) repeat(2, auto);
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(1.5rem * 0.5);
}

.emotion-2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #FFFFFF;
  color: #081D17;
  font-weight: 500;
  width: auto;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-2:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-2:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-2 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-2 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-2 i:first-child {
  margin-left: -1.25rem;
}

.emotion-2 i:last-child {
  margin-right: -1.25rem;
}

.emotion-2:enabled {
  border: 1px solid #E0E1E2;
}

.emotion-2:enabled:active {
  color: #061813;
  background-color: #F8F9F9;
}

.emotion-2:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-2:enabled:hover {
  border: 1px solid #2f413c;
}

.emotion-2:enabled:hover i {
  color: #081D17;
}

.emotion-2::-moz-focus-inner {
  border: 0;
}

.emotion-2:focus {
  border: 1px solid transparent;
}

.emotion-2:focus:hover {
  border: 1px solid transparent;
}

.emotion-2 i {
  color: #989A9C;
}

.emotion-3 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr;
  visibility: inherit;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: inherit;
  font-size: inherit;
  line-height: 1.25;
}

.emotion-5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 0.875rem;
  height: 2.5rem;
  padding: 0 1.25rem;
  background-color: #081D17;
  color: #C0F9DA;
  font-weight: 500;
  width: auto;
  line-height: 1;
  border: 1px solid transparent;
  border-radius: 3px;
}

.emotion-5:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-5:enabled {
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.emotion-5 i {
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  vertical-align: middle;
}

.emotion-5 i {
  width: 2.5rem;
  font-size: 0.875rem;
}

.emotion-5 i:first-child {
  margin-left: -1.25rem;
}

.emotion-5 i:last-child {
  margin-right: -1.25rem;
}

.emotion-5:enabled:active {
  background-color: #061813;
}

.emotion-5:enabled:focus {
  box-shadow: 0 0 0 3px #B6EFD0;
}

.emotion-5:enabled:hover {
  background-color: #2f413c;
}

.emotion-5::-moz-focus-inner {
  border: 0;
}

.emotion-5:focus {
  border: 1px solid transparent;
}

.emotion-5:focus:hover {
  border: 1px solid transparent;
}

.emotion-5 i {
  color: inherit;
}

<header
  className="emotion-0"
  display="grid"
>
  <h1
    className="emotion-1"
    color="text.dark"
    fontSize="size7"
    fontWeight="bold"
  >
    My Heading
  </h1>
  <button
    className="button--secondary emotion-2"
    disabled={false}
    fontWeight="medium"
    size="large"
  >
    <div
      className="emotion-3"
      display="inline-grid"
    >
      <p
        className="emotion-4"
        color="inherit"
        fontSize="inherit"
      >
        Secondary
      </p>
    </div>
  </button>
  <button
    className="button--primary emotion-5"
    disabled={false}
    fontWeight="medium"
    size="large"
  >
    <div
      className="emotion-3"
      display="inline-grid"
    >
      <p
        className="emotion-4"
        color="inherit"
        fontSize="inherit"
      >
        Primary
      </p>
    </div>
  </button>
</header>
`;
